refactor: 现代化代码库以使用 JDK 21 特性和 RestClient
- 将 RestTemplate 替换为 RestClient 以使用更现代的 API
- 使用 list.getFirst() 替代 list.get(0) 以提高可读性
- 将 AuditLogService.RecordParams 重构为 record 以减少样板代码
- 在 GenericEntityController 中使用 instanceof 模式匹配和流式处理
- 更新 OpaqueTokenIntrospector 配置以正确处理负载均衡